--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,5 +3,29 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body{
     background-color: lightblue;
+}
+
+.container{
+    width: 80%;
+    margin: auto;
+    margin-top: 5rem;
+}
+
+.d_flex{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.movieCard{
+    margin: 1.5rem;
+    padding: 1rem;
+    width: calc(100% / 4);
+    background: linear-gradient(0deg, rgba(7,170,237,1) 0%, rgba(21,101,221,1) 100%);
+    border: 1px solid black;
+    border-radius: 15px;
 }
